Changes from version 2.0.3

---- Improvements ----

  * New commands: KeyCode, DeleteNextWord, DeletePrevWord, AutoComplete.

  * Now we set the syntax when a file is saved with a (different) name.

  * Fixed small mistakes in the keyboard sequences displayed in the menus,
    and small discrepancies between default.keys/default.menus and reality
    (thanks to John Gabriele for having pointed out this).

  * Now we highlight correctly control characters in the command line.

  * Display request lists by columns instead of rows.

  * Allow window resizing during requests.

  * Sort filenames in dictionary order ("aa", "Ab", "ac", ...).

  * Enter in Help places you on the right command in the command list.

  * Only prompt once about identical filenames on startup.

  * Consider "_" as a word character for word-oriented commands.

  * Built-in filename extension to syntax mapping updates:
    dtx -> tex, latex -> tex,  sage -> python.

  * Replace reports the number of replacements (again).
  
  * Aborting an OpenNew doesn't leave you in a new blank document.

---- Bug fixes ----

  * Fix rx detection in perl.jsf.

Changes from version 2.0.2

---- Bug fixes ----

  * Still better file handling for the THROUGH command.

  * Visual glitches appearing on Cygwin have been fixed.

Changes from version 2.0.1

---- Bug fixes ----

  * The file names for the THROUGH command were being generated
    correctly, but in the current directory instead of P_tmpdir.

  * The built-in ANSI escape sequences had a glitch that could cause
    some visual inconsistencies.

Changes from version 2.0

---- Bug fixes ----

  * The file names for the THROUGH command were being generated
    incorrectly.

Changes from version 1.43

---- Improvements ----

  * We got syntax highlighting! Thanks to Daniele Filaretti, whose undergrad
    thesis was about porting joe's syntax highlighting system to ne.

  * Billions of small improvements and cleanups.

Changes from version 1.42
