@@ -187,6 +187,7 @@ buffer *alloc_buffer(const buffer * const cur_b) {
 
 		b->opt.status_bar     =
 		b->opt.insert         =
+		b->opt.tabs           =
 		b->opt.verbose_macros =
 		b->opt.do_undo        =
 		b->opt.auto_prefs     = 1;
@@ -199,6 +200,7 @@ buffer *alloc_buffer(const buffer * const cur_b) {
 
 			b->opt.cur_clip       = cur_b->opt.cur_clip;
 			b->opt.tab_size       = cur_b->opt.tab_size;
+			b->opt.tabs           = cur_b->opt.tabs;
 			b->opt.right_margin   = cur_b->opt.right_margin;
 
 			b->opt.free_form      = cur_b->opt.free_form;
