@@ -373,6 +373,7 @@ typedef struct {
 		read_only:1,       /* Read-only mode */
 		search_back:1,     /* Last search was backwards */
 		case_search:1,     /* Look at case matching in searches */
+		tabs:1,            /* TAB inserts TABs vs. spaces */
 		binary:1,          /* Load and save in binary mode */
 		utf8auto:1,        /* Try to detect automatically UTF-8 */
 		visual_bell:1;     /* Prefer visible bell to audible */
